--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -3,8 +3,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_color"
     tools:context=".BlankFragment">
+    <LinearLayout
+        android:id="@+id/in_app_notify"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="20dp"
+        android:elevation="8dp"
+        android:background="@drawable/notify_shape"
+        android:orientation="horizontal">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_avatar"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/in_app_notify_head"
+                android:text="@string/in_app_notify_head"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/in_app_notify_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:layout_marginTop="2dp"
+                android:textColor="@color/in_app_notify_text"
+                android:text="@string/notification_text"/>
+        </LinearLayout>
+    </LinearLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/create_notify"
         android:layout_width="@dimen/create_notify_size"
